creating timetable and adding styling

--- a/Table.html
+++ b/Table.html
@@ -4,9 +4,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mystyle.css">
     <title>Document</title>
 </head>
 <body>
+
+    <table class="timetable">
+       <thead>
+          <tr>
+          <th>Godziny</th>
+          <th>Poniedziałek</th>
+          <th>Wtorek</th>
+          <th>Środa</th>
+          <th>Czwartek</th>
+          <th>Piątek</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="odd">
+          <th>8:00 - 8:45</th>
+          <td>Przedmiot 1</td>
+          <td>Przedmiot 8</td>
+          <td>Przedmiot 3</td>
+          <td>Przedmiot 9</td>
+          <td>Przedmiot 6</td>
+        </tr>
+        <tr class="even">
+            <th>8:55 - 9:40</th>
+            <td>Przedmiot 2</td>
+            <td>Przedmiot 9</td>
+            <td>Przedmiot 4</td>
+            <td>Przedmiot 10</td>
+            <td>Przedmiot 7</td>
+        </tr>
+        <tr class="odd">
+            <th>9:50 - 10:35</th>
+            <td>Przedmiot 3</td>
+            <td>Przedmiot 10</td>
+            <td>Przedmiot 5</td>
+            <td>Przedmiot 1</td>
+            <td>Przedmiot 8</td>
+        </tr>
+        <tr class="even">
+            <th>10:45 - 11:30</th>
+            <td>Przedmiot 4</td>
+            <td>Przedmiot 1</td>
+            <td>Przedmiot 6</td>
+            <td>Przedmiot 2</td>
+            <td>Przedmiot 9</td>
+        </tr>
+        <tr class="odd">
+            <th>11:40 - 12:25</th>
+            <td>Przedmiot 5</td>
+            <td>Przedmiot 2</td>
+            <td>Przedmiot 7</td>
+            <td>Przedmiot 3</td>
+            <td></td>
+        </tr>
+        <tr class="even">
+            <th>12:35 - 13:20</th>
+            <td>Przedmiot 6</td>
+            <td></td>
+            <td>Przedmiot 8</td>
+            <td>Przedmiot 4</td>
+            <td></td>
+        </tr>
+        <tr class="odd">
+            <th>13:30 - 14:15</th>
+            <td>Przedmiot 7</td>
+            <td></td>
+            <td></td>
+            <td>Przedmiot 5</td>
+            <td></td>
+        </tr>
+    </tbody>
+      </table>
     
 </body>
 </html>
